# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  Todo  a.out  ab.cpp  client  client.cpp  query.txt  script.sh  server  server.cpp  test.test  test.txt  tester.py  webserv
conf/: default.conf  max.conf  test.conf  webserv.conf  wordpress.conf
docker/: Dockerfile  entrypoint.sh
includes/: includes.h  utils.hpp
srcs/: a.out  main.cpp  test.conf  webserv.conf  webserv.cpp
srcs/classes/: Server.cpp  Server.hpp
srcs/classes/cgi/: Cgi.cpp  Cgi.hpp
srcs/classes/client/: Client.cpp  Client.hpp  Client_TCP.cpp  Client_TCP.hpp
srcs/classes/config/: Config.cpp  Config.hpp  LocationConfig.cpp  LocationConfig.hpp  ServerConfig.cpp  ServerConfig.hpp
srcs/classes/logger/: Logger.hpp
srcs/classes/parser/: Parser.cpp  Parser.hpp
srcs/classes/queries/: Query.cpp  Query.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Response_old.cpp  Response_old.hpp
srcs/classes/response/: Response.hpp
srcs/classes/server/: Server.cpp  Server.hpp  ServerManager.cpp  ServerManager.hpp
srcs/home/: app.js  index.bla  index.php  index.rb  maxou.html  style.css  test.php
srcs/home/server/: InternalServerError.html  put.html
srcs/includes/: includes.h
srcs/server/: NotFound.html  deleted.html
srcs/utils/: utils.cpp
www/: index.bla  index.html  index.html.de  index.php  maxou.html  post.html  test.php
www/YoupiBanane/: youpi.bad_extension  youpi.bla
www/YoupiBanane/Yeah/: not_happy.bad_extension
www/YoupiBanane/nop/: other.pouic  youpi.bad_extension
www/YoupiBanane/uploads/: file_should_exist_after  index.html  index.php  lol  lolzzzz  maxou.html  multiple_same  yo  yolesteamsmateseheh
www/server/: DirectoryListingTemplate.html  ErrorTemplate.html  ErrorTemplate2.html  Forbidden.html  unauthorized.html
www/uploads/: index.bf  index.bla  index.html
www/uploads/bonjour/: louis.txt  maxou.txt  tim.txt
www/wordpress/: license.txt  wp-config.php  wp-mail.php
www/wordpress/wp-admin/: about.php  customize.php  edit-form-advanced.php  edit-form-blocks.php  options-media.php  options-reading.php  theme-install.php  themes.php  user-edit.php
www/wordpress/wp-includes/: author-template.php  blocks.php  bookmark.php  category-template.php  category.php  class-http.php  class-pop3.php  class-requests.php  (+45 more)
(+295 files in other folders)
